// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardItem /> Matches the Card Item Default snapshot 1`] = `
<article
  className="cardItem"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h2
      className="title "
    >
      <a
        className="link "
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <figure
    className="image"
  >
    <a
      className={null}
      href="/"
    >
      <img
        alt="Placeholder Image"
        className="img"
        data-src="http://placehold.it/1920x1080.png"
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <p
    className="blurb"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Test Teaser",
        }
      }
    />
  </p>
</article>
`;

exports[`<CardItem /> Matches the Card Item Large snapshot 1`] = `
<article
  className="cardItem cardItemLg"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap titleWrapLg"
  >
    <h2
      className=" "
    >
      <a
        className="link "
        href="/"
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <p
    className="blurb blurbLg"
  />
</article>
`;

exports[`<CardItem /> Matches the Card Item No Link snapshot 1`] = `
<article
  className="cardItem"
  typeof="sioc:Item foaf:Document"
>
  <div
    className="titleWrap"
  >
    <h2
      className="title freeformTitle"
    >
      <a
        className="link freeformLink"
        href={null}
      >
        Test Title
      </a>
    </h2>
    <span
      content="Test Title"
      property="dc:title"
    />
    <span
      content="0"
      datatype="xsd:integer"
      property="sioc:num_replies"
    />
  </div>
  <figure
    className="image"
  >
    <a
      className={null}
      href={null}
    >
      <img
        alt={null}
        className="img"
        data-src="http://placehold.it/1920x1080.png"
        typeof="foaf:Image"
      />
    </a>
  </figure>
  <div
    className="blurb"
  />
</article>
`;
